<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:key="settings_general" android:title="@string/settings_generalTitle">
		<CheckBoxPreference android:key="checkBoxTest"
							android:title="@string/settings_checkBoxTestTitle"
							android:summary="@string/settings_checkBoxTestSummary"
							android:defaultValue="true" />

		<ListPreference android:key="listTest"
						android:title="@string/settings_listTestTitle"
						android:entries="@array/settings_listTestEntries"
						android:entryValues="@array/settings_listTestEntryValues"
						android:defaultValue="0" />
	</PreferenceCategory>

	<PreferenceCategory android:key="settings_extra" android:title="@string/settings_extraTitle">
		<Preference android:key="more"
					android:title="@string/settings_button_otherAppsTitle" />

		<Preference android:key="support"
					android:title="@string/settings_button_supportTitle"
					android:summary="@string/support_email"
					android:enabled="false" />
	</PreferenceCategory>
</PreferenceScreen>
